--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -84,14 +84,17 @@ $bannerPosition = ($this->themeSetting('banner_position')) ? str_replace('_', '-
                 <?php endif; ?>
                 <?php echo $this->content; ?>
             </div>
-            <?php if ($footerContent = $this->themeSetting('footer')): ?>
+            <?php 
+            $poweredByOmekaS = "Powered by Omeka S"; 
+            $footerContent = $this->themeSetting('footer');
+            ?>
+            <?php if ($footerContent && (strpos($footerContent, $poweredByOmekaS) === false)): ?>
                 <footer>
-                <?php echo $footerContent; ?>
+                    <?php echo $footerContent; ?>
                 </footer>
                 <?php else: ?>
                 <footer class="footerContainer">							
-                    <div class="grid-x grid-padding-x grid-container padding-vertical-3">
-                        
+                    <div class="grid-x grid-padding-x grid-container padding-vertical-3">                        
                         <div class="cell small-6 medium-4 padding-left-1 padding-bottom-1">
                             <div class="footerLogos">
                 
