Revisions to Inkwell menu

--- a/asset/scss/inkwell.scss
+++ b/asset/scss/inkwell.scss
@@ -157,6 +157,39 @@ a:hover {
     fill: $dark-gray;
 }
 
+.toc-block ul ul.dropdown>li.is-dropdown-submenu-parent.active>a {
+    padding-right: 2rem;
+    color: $dark-gray;
+}
+
+.dropdown.menu>li.is-active>a, .toc-block>ul.dropdown>li.is-active>a, .toc-block ul ul.dropdown>li.is-active>a {
+    color: $dark-gray;
+}
+
+#responsive-menu > ul > li.dropdown.active.is-dropdown-submenu-parent.opens-left.is-active > ul > li > a {
+color: $white;
+}
+
+.dropdown.menu>li.is-dropdown-submenu-parent>a::after, .toc-block>ul.dropdown>li.is-dropdown-submenu-parent>a::after, .toc-block ul ul.dropdown>li.is-dropdown-submenu-parent>a::after {
+border-color: $dark-gray transparent transparent;
+}
+
+.toc-block>ul.dropdown>li.is-active>a {
+    color: $white;
+}
+
+#responsive-menu > ul > li.dropdown.is-dropdown-submenu-parent.opens-left.is-active > ul > li > a {
+color: $white;
+}
+
+#responsive-menu > ul > li.dropdown.active.is-dropdown-submenu-parent.opens-left.is-active > a:after {
+border-color: $dark-gray transparent transparent;
+}
+
+.dropdown.menu>li.is-dropdown-submenu-parent>a:hover:after {
+    border-color: $white transparent transparent;
+}
+
 /*Footer*/ 
 .background-colour-uom-footer a:hover,
 .footerContainer a:hover  {
