--- a/view/common/block-layout/resource-text-full-width-dark.phtml
+++ b/view/common/block-layout/resource-text-full-width-dark.phtml
@@ -28,7 +28,7 @@ $lang = $filterLocale ? $this->lang() : null;
     </div>
     <?php endif; ?>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-7 flex-container align-spaced medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
-        <div class="attachments max-image-height">
+        <div class="attachments max-image-height flex-container align-middle align-center">
         <?php
             foreach ($attachments as $attachment):
                 $render = null;
