--- a/view/common/block-layout/resource-text-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-full-width-portrait.phtml
@@ -27,8 +27,8 @@ $lang = $filterLocale ? $this->lang() : null;
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
-        <div class="attachments large-offset-2 xlarge-offset-3">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-6 flex-container medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
+        <div class="attachments flex-container align-middle align-center">
         <?php
             foreach ($attachments as $attachment):
                 $render = null;
@@ -76,7 +76,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-7 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text large-6 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
     <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == "item_title"): ?>
