--- a/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-metadata-full-width-portrait.phtml
@@ -28,7 +28,7 @@ $lang = $filterLocale ? $this->lang() : null;
     </div>
     <?php endif; ?>
     <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-5 flex-container medium-padding-horizontal-1 large-padding-horizontal-2 xlarge-padding-horizontal-3">
-        <div class="attachments large-offset-2 xlarge-offset-3">
+        <div class="attachments flex-container align-middle align-center">
         <?php
             foreach ($attachments as $attachment):
                 $render = null;
