Removed extra padding from introduction texts; revised item showcase blocks

--- a/view/common/block-layout/item-showcase-block.phtml
+++ b/view/common/block-layout/item-showcase-block.phtml
@@ -5,7 +5,7 @@
         </div>
     <?php endif; ?>
 </div>
-<div class="col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
+<div class="col-container col-media-container" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
         <div class="item-showcase max-image-height item resource small-margin-bottom-1 medium-margin-bottom-2 text-center">
             <?php
