--- a/view/common/block-layout/item-showcase-block-cover-full-width.phtml
+++ b/view/common/block-layout/item-showcase-block-cover-full-width.phtml
@@ -5,7 +5,7 @@
         </div>
     <?php endif; ?>
 </div>
-<div class="full-width-css col-container col-media-container medium-padding-1" data-target-region-id="<?php echo $this->targetID; ?>">
+<div class="full-width-css medium-padding-1 large-padding-2 xlarge-padding-3 col-container col-media-container" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
         <div class="item-showcase item-showcase-cover item resource text-center">
             <?php
