Changed default button colours

--- a/asset/scss/_globals-default.scss
+++ b/asset/scss/_globals-default.scss
@@ -2,7 +2,7 @@
 $global-font-size: 100%;
 $global-width: rem-calc(1140);
 $global-lineheight: 1.5;
-$foundation-palette: ( primary: #660099, secondary: #2c0142, success: #3adb76, warning: #FFCC33, alert: #c91b00);
+$foundation-palette: ( primary: #660099, secondary: #2c0142, success: #009966, warning: #FFCC33, alert: #991900);
 $light-gray: #ececed;
 $medium-gray: #8a8a8a;
 $dark-gray: #393a3c;
