--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -495,23 +495,29 @@ nav.breadcrumbs {
 
 /*Media Embed*/
 /*Increase size of thumbnails for Media Embed blocks*/ 
-.left {
+.left .media-render img {
   float: left;
-  margin: 0 (2.5 * $global-margin) $global-margin 0;
-  max-width: 40%;
-  @include breakpoint(medium down) {
-      max-width: 50%;
-      margin: 0 $global-margin $global-margin 0;
+  margin: 0 $global-margin $global-margin 0;
+  max-width: 50%;
+  @include breakpoint(medium) {
+    margin: 0 2 * $global-margin $global-margin 0;
+  }
+  @include breakpoint(large) {
+      max-width: 40%;
+      margin: 3 * $global-margin $global-margin 0;
   }
 }
 
-.right {
+.right .media-render img {
   float: right;
-  margin: 0 (2.5 * $global-margin) $global-margin 0;
-  max-width: 40%;
-  @include breakpoint(medium down) {
-      max-width: 50%;
-      margin: 0 $global-margin $global-margin 0;
+  margin: 0 0 $global-margin $global-margin;
+  max-width: 50%;
+  @include breakpoint(medium) {
+    margin: 0 0 2 * $global-margin $global-margin;
+  }
+  @include breakpoint(large) {
+      max-width: 40%;
+      margin: 0 3 * $global-margin $global-margin;
   }
 }
 
