--- a/view/common/block-layout/html-introduction-dark.phtml
+++ b/view/common/block-layout/html-introduction-dark.phtml
@@ -9,7 +9,7 @@
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<div class="full-width-css colour-scheme-4 padding-vertical-1 flex-container <?= $this->escapeHtmlAttr($divclass) ?>">
+<div class="full-width-css background-colour-uom-footer padding-vertical-1 flex-container <?= $this->escapeHtmlAttr($divclass) ?>">
     <div class="grid-x grid-container flex-container">
         <?php if (!empty($heading)): ?>
         <h2><?= $escape($heading) ?></h2>
