--- a/view/common/block-layout/file.phtml
+++ b/view/common/block-layout/file.phtml
@@ -3,7 +3,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
 $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
 ?>
 
-<div class="<?php echo $this->alignmentClass . ' ' . $this->thumbnailType; ?> file">
+<div class="media-embed-block <?php echo $this->alignmentClass . ' ' . $this->thumbnailType; ?> file">
     <div class="attachments max-image-height">
     <?php foreach($this->attachments as $attachment): ?>
         <div class="item resource max-image-height">
