Restricted max image height to media embed block

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -521,8 +521,8 @@ nav.breadcrumbs {
   }
 }
 
-.left .max-image-height img,
-.right .max-image-height img {
+.media-embed-block.left .max-image-height img,
+.media-embed-block.right .max-image-height img {
   max-height: 50vh;
 }
 
