Revised margins and padding for Item Showcase blocks

--- a/view/common/block-layout/item-showcase-multiples.phtml
+++ b/view/common/block-layout/item-showcase-multiples.phtml
@@ -11,7 +11,7 @@
 </div>
 <div class="item-showcase-multiples grid-x grid-margin-x flex-container align-spaced small-padding-0">
     <?php foreach ($attachments as $attachment): ?>
-        <div class="item-showcase card auto item item-count-<?php echo $itemCount; ?> resource flex-container flex-dir-column align-middlemargin-1 medium-margin-bottom-2">
+        <div class="item-showcase card auto item item-count-<?php echo $itemCount; ?> resource flex-container flex-dir-column align-middle margin-1">
             <?php
             $item = $attachment->item();
             if ($item):
