--- a/view/common/block-layout/resource-text-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-full-width-portrait.phtml
@@ -77,19 +77,19 @@ $lang = $filterLocale ? $this->lang() : null;
         </div>
     </div>
     <div class="resource-text large-6 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
-    <div class="metadata margin-bottom-1 separator-center">
-        <?php $showTitleOption = $this->showTitleOption; ?>
-        <?php if ($showTitleOption == "item_title"): ?>
-        <h2><?php echo $item->displayTitle(); ?></h2>
-        <?php elseif ($showTitleOption == "file_name"): ?>
-        <h2><?php echo $media->displayTitle(); ?></h2>
-        <?php endif; ?>
-      </div>
-      <div class="text">
+        <div class="metadata margin-bottom-1 separator-center">
+            <?php $showTitleOption = $this->showTitleOption; ?>
+            <?php if (isset($item) && $showTitleOption == "item_title"): ?>
+                <h2><?php echo $item->displayTitle(); ?></h2>
+            <?php elseif (isset($media) && $showTitleOption == "file_name"): ?>
+                <h2><?php echo $media->displayTitle(); ?></h2>
+            <?php endif; ?>
+        </div>
+        <div class="text">
             <?= $html ?>
         </div>
         <div class="learn-more">
-            <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+            <h2 class="button large warning"><?php echo isset($item) ? $item->link("View full item") : ''; ?></h2>
         </div>
     </div>
 </div>
