--- a/view/common/block-layout/resource-text-full-width-portrait.phtml
+++ b/view/common/block-layout/resource-text-full-width-portrait.phtml
@@ -43,7 +43,7 @@ $lang = $filterLocale ? $this->lang() : null;
                         
                         if ($mediaRenderer === 'iiif') :
                             echo $this->thumbnail($media, $this->thumbnailType);
-                        elseif ($mediaType === 'image/jpeg') :
+                        elseif ($mediaType === 'image/jpeg' || $mediaType === 'image/tiff' || $mediaType === 'image/png') :
                             echo $this->thumbnail($media, $this->thumbnailType);
                         else:
                             echo $media->render(['thumbnailType' => $thumbnailType, 'link' => $link]);
