--- a/view/common/block-layout/item-showcase-no-image-dark.phtml
+++ b/view/common/block-layout/item-showcase-no-image-dark.phtml
@@ -1,7 +1,7 @@
 <div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-y grid-margin-y margin-top-1 medium-margin-top-0 small-padding-0 medium-padding-1 large-padding-horizontal-2 region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?> ">
     <div class="grid-x grid-margin-x flex-container align-spaced">
         <?php foreach ($attachments as $attachment): ?>
-            <div class="item-showcase item-listing-item item resource flex-dir-column small-margin-bottom-1 medium-margin-bottom-2 background-colour-uom-footer">
+            <div class="item-showcase item resource flex-dir-column small-margin-bottom-1 medium-margin-bottom-2 background-colour-uom-footer">
                 <?php
                 $item = $attachment->item();
                 if ($item):
