Consolidated inkwell SASS files

--- a/asset/scss/_globals-inkwell.scss
+++ b/asset/scss/_globals-inkwell.scss
@@ -2,11 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 $foundation-palette: (
-  primary: #ffcc00,
-  secondary: #c5f4f2,
-  success: #3adb76,
-  warning: #ffae00,
-  alert: #cc4b37,
+  primary: #660099, 
+  secondary: #2c0142, 
+  success: #3adb76, 
+  warning: #FFCC33, 
+  alert: #c91b00
 );
 $global-font-size: 18px;
 $body-font-family: 'Open Sans', sans-serif;
