--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -70,7 +70,7 @@ foreach ($itemMedia as $index => $media) {
 <div class="<?php echo ($showLayout == 'inline') ? 'inline' : 'stack'; ?>">
     <?php $this->trigger('view.show.before'); ?>
 
-    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3 flex-container align-center">
+    <div class="full-width-main margin-bottom-2 xlarge-margin-bottom-3">
         <?php 
         // Display the main viewer
         if ($miradorViewer !== null) {
