--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -1684,16 +1684,10 @@ span.resource-name {
 .item-listing,
 .image-cover-img img {
   width: 100vw;
-  height: auto;
-  max-height: 70vh;
+  min-height: 100vh;
   object-fit: cover;
   object-position: center;
-  aspect-ratio: 1;
-  @include breakpoint(medium) {
-      height: 100%;
-  }
   @include breakpoint(large) {
-      height: 100vh;
       max-height: unset;
   }
 }
@@ -1703,12 +1697,6 @@ span.resource-name {
   height: 90vh;
 }
 }
-
-.image-cover-img img {
-  @include breakpoint(large) {
-      min-height: 100vh;
-  }
-  }
 
 .item-listing-image {
   position: relative;
@@ -2918,9 +2906,8 @@ figure.max-image-height img,
 }
 
 /*Maximum Block Height*/ 
-@include breakpoint(large) {
-.max-block-height {
+.max-block-height,
+.max-block-height img {
   height: 100vh;
   overflow-y: auto;
-}
 }
