--- a/view/common/block-layout/resource-text-image-cover-dark.phtml
+++ b/view/common/block-layout/resource-text-image-cover-dark.phtml
@@ -21,15 +21,15 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text full-width-css grid-x grid-padding-x background-colour-uom-footer margin-bottom-1 flex-container image-cover">
+<div class="block media-text full-width-css grid-x grid-padding-x margin-bottom-1 flex-container image-cover background-colour-uom-footer">
     <?php if (!empty($heading)): ?>
-    <div class="grid-container cell margin-bottom-1">
+    <div class="media-text-heading medium-offset-1 large-offset-2 margin-bottom-1">
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-7">
-        <div class="attachments max-image-height">
-        <?php
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-7 flex-container max-block-height align-self-middle">
+    <div class="attachments">
+            <?php
             foreach ($attachments as $attachment):
                 $render = null;
                 $title = null;
@@ -78,7 +78,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text background-colour-uom-footer large-5 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
+    <div class="resource-text large-5 flex-container flex-dir-column align-center align-middle padding-1 large-padding-2 xlarge-padding-3">
     <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == "item_title"): ?>
@@ -109,7 +109,7 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
         </div>
         <div class="learn-more">
-                <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+            <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
         </div>
     </div>
 </div>
