--- a/view/common/block-layout/resource-text-image-cover.phtml
+++ b/view/common/block-layout/resource-text-image-cover.phtml
@@ -27,8 +27,8 @@ $lang = $filterLocale ? $this->lang() : null;
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 xlarge-7 flex-container">
-    <div class="attachments max-image-height">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-7 flex-container max-block-height align-self-middle">
+    <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
