--- a/view/common/block-layout/resource-text-full-width-portrait-dark.phtml
+++ b/view/common/block-layout/resource-text-full-width-portrait-dark.phtml
@@ -69,8 +69,8 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
             <div class="item resource">
                 <?= $render ?>                
-                <div class="caption margin-horizontal-1 padding-1">
-                <?= $caption ?>                   
+                <div class="caption">
+                    <figcaption class="orbit-caption caption no-overlay"><?php echo $caption; ?></figcaption>                  
                 </div>
             </div>
             <?php endforeach; ?>
