--- a/view/common/block-layout/resource-text-image-cover-portrait.phtml
+++ b/view/common/block-layout/resource-text-image-cover-portrait.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
         <h2 class="h2 padding-vertical-1"><?= $escape($heading) ?></h2>
     </div>
     <?php endif; ?>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container align-self-middle">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-6 flex-container align-self-middle max-block-height">
     <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
@@ -86,27 +86,9 @@ $lang = $filterLocale ? $this->lang() : null;
         <?php elseif ($showTitleOption == "file_name"): ?>
         <h2><?php echo $media->displayTitle(); ?></h2>
         <?php endif; ?>
-        <?php
-         $date = $item->value('dcterms:date');
-         if ($date):
-         ?>
-      <h2><small date><?php echo $date; ?></small></h2>
-      <?php endif; ?>
-      <?php
-         $origin = $item->value('curation:location');
-         if ($origin):
-         ?>
-      <h2><small origin><?php echo $origin; ?></small></h2>
-      <?php endif; ?>
       </div>
       <div class="text">
             <?= $html ?>
-            <?php
-            $identifier = $item->value("dcterms:identifier");
-            if ($identifier): ?>
-            <h2 class="h4"><small><?php echo "Ref. " . $identifier; ?></small></h2>
-            <?php endif;
-            ?>
         </div>
         <div class="learn-more">
             <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
