--- a/view/common/block-layout/item-showcase-block-metadata.phtml
+++ b/view/common/block-layout/item-showcase-block-metadata.phtml
@@ -43,23 +43,22 @@
                 ?>
                 <h2 class="text-center"><small origin><?php echo $origin; ?></small></h2>
             <?php endif; ?>
-            <?php
-            $caption = $attachment->caption();
-            if ($caption):
-                ?>
-                <div class="caption padding-1 grid-container text-left"><?php echo $caption; ?></div>
-            <?php endif; ?>
-
-            <div class="text text-center">
+            <div class="margin-top-1 medium-margin-top-2">
                 <?php
-                $identifier = $item->value('dcterms:identifier');
-                if ($identifier):
-                ?>
-                <h2 class="grid-container h4 identifier"><small><?php echo 'Ref. ' . $identifier; ?></small></h2>
+                $caption = $attachment->caption();
+                if ($caption):
+                    ?>
+                    <div class="caption padding-1 grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
                 <?php endif; ?>
-            </div>
-            <div class="learn-more">
-                <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                <?php
+                    $identifier = $item->value("dcterms:identifier");
+                    if ($identifier): ?>
+                        <p class="h4 margin-bottom-1"><small><?php echo "Ref. " . $identifier; ?></small></p>
+                    <?php endif;
+                    ?>
+                <div class="learn-more">
+                    <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+                </div>
             </div>
         </div>
     <?php endforeach; ?>
