--- a/view/common/block-layout/item-showcase-multiples.phtml
+++ b/view/common/block-layout/item-showcase-multiples.phtml
@@ -33,15 +33,17 @@
                     <?php endif; ?>
                 <?php endif; ?>
                 </div>
-            <?php
-            $caption = $attachment->caption();
-            if ($caption):
-                ?>
-                <div class="caption padding-1 xlarge-padding-horizontal-3 flex-child-grow"><?php echo $caption; ?></div>
-            <?php endif; ?>
-            <div class="learn-more">
-                <h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
-            </div>
+                <div class="margin-top-1 medium-margin-top-2">
+                    <?php
+                    $caption = $attachment->caption();             
+                    if ($caption):
+                        ?>
+                        <div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
+                    <?php endif; ?>
+                    <div class="learn-more">
+                        <h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
+                    </div>
+                </div>
         </div>
     <?php endforeach; ?>
 </div>
