--- a/view/common/block-layout/item-showcase-openseadragon-full-width-dark-metadata.phtml
+++ b/view/common/block-layout/item-showcase-openseadragon-full-width-dark-metadata.phtml
@@ -42,22 +42,24 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
                             if ($date):
                             ?>
                         <h2 class="h3 margin-bottom-0"><small><?php echo $date; ?></small></h2>
-                        <?php endif; ?>
-                <?php
-                $caption = $attachment->caption();
-                if ($caption):
-                    ?>
-                    <div class="caption padding-1 grid-container"><?php echo $caption; ?></div>
-                <?php endif; ?>
-                <?php
-                    $identifier = $item->value("dcterms:identifier");
-                    if ($identifier): ?>
-                        <p class="h4 margin-bottom-1"><small><?php echo "Ref. " . $identifier; ?></small></p>
-                    <?php endif;
-                    ?>
-                <?php endif; ?>
-                <div class="learn-more">
-                    <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+                    <?php endif; ?>
+                <div class="margin-top-1 medium-margin-top-2">
+                    <?php
+                    $caption = $attachment->caption();
+                    if ($caption):
+                        ?>
+                        <div class="caption padding-1 grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
+                    <?php endif; ?>
+                    <?php
+                        $identifier = $item->value("dcterms:identifier");
+                        if ($identifier): ?>
+                            <p class="h4 margin-bottom-1"><small><?php echo "Ref. " . $identifier; ?></small></p>
+                        <?php endif;
+                        ?>
+                    <?php endif; ?>
+                    <div class="learn-more">
+                        <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+                    </div>
                 </div>
             </div>
         <?php endforeach; ?>
