--- a/view/common/block-layout/item-showcase.phtml
+++ b/view/common/block-layout/item-showcase.phtml
@@ -26,14 +26,16 @@
 			<?php endif;
   ?>
 
+		<div class="margin-top-1 medium-margin-top-2">
 			<?php
-   $caption = $attachment->caption();
-   if ($caption): ?>
-			<div class="caption"><?php echo $caption; ?></div>
-			<?php endif;
-   ?>
-		<div class="learn-more">
-			<h2 class="hollow button medium warning"><?php echo $item->link("View full item"); ?></h2>
+			$caption = $attachment->caption();             
+			if ($caption):
+				?>
+				<div class="caption grid-container margin-bottom-1 medium-margin-bottom-2"><?php echo $caption; ?></div>
+			<?php endif; ?>
+			<div class="learn-more">
+				<h2 class="button medium warning"><?php echo $item->link("View full item"); ?></h2>
+			</div>
 		</div>
 	</div>
 	<?php endforeach; ?>
