--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -59,7 +59,7 @@ $bannerPosition = ($this->themeSetting('banner_position')) ? str_replace('_', '-
         <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-MTKP79D'); </script> <!-- End Google Tag Manager -->
     </head>
 
-    <?php echo $this->htmlElement('body class="no-js"'); ?>
+    <?php echo $this->htmlElement('body'); ?>
         <!-- Google Tag Manager (noscript) -->
             <noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-MTKP79D height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> 
         <!-- End Google Tag Manager (noscript) -->
