Added buttons to RwT Openseadragon no metadata blocks

--- a/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
+++ b/view/common/block-layout/resource-text-openseadragon-no-metadata-dark.phtml
@@ -86,5 +86,8 @@ $lang = $filterLocale ? $this->lang() : null;
         <div class="text">
             <?= $html ?>
         </div>
+        <div class="learn-more">
+            <h2 class="button large warning"><?php echo $item->link("View full item"); ?></h2>
+        </div>
     </div>
 </div>
