Removed text decoration from buttons

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -643,6 +643,10 @@ nav.breadcrumbs {
   background: $warning-color;
 }
 
+.learn-more .button a {
+  text-decoration: none;
+}
+
 /*Foundation S Prototype*/ 
 .lead {
   line-height: 1.6;
